# stm32evk-cmake

./: .env  .gitignore  CMakeLists.txt  README.md  project.cmake  stm-toolchain.cmake
configs/: stm32f0x.cfg
lib/Drivers/: stm32_framework.cmake
lib/Drivers/CMSIS/: component_cmsis.cmake
lib/Drivers/CMSIS/Device/: cmsis_st_stm32f0xx.cmake
lib/Drivers/STM32F0xx_HAL_Driver/drivers/stm32f0xx/: driver_adc.cmake  driver_cortex.cmake  driver_dma.cmake  driver_exti.cmake  driver_flash.cmake  driver_gpio.cmake  driver_hal.cmake  driver_i2c.cmake  driver_pwr.cmake  driver_rcc.cmake  driver_spi.cmake  driver_tim.cmake  driver_uart.cmake  drivers_all.cmake
src/Inc/: stm32f0xx_it.h
src/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
